--- a/.github/workflows/case-monitor.yml
+++ b/.github/workflows/case-monitor.yml
@@ -1,6 +1,8 @@
 name: Case Monitor
 
 on:
+  schedule:
+    - cron: '*/15 * * * *' # Run every 15 minutes
   workflow_dispatch: # Allow manual triggering
 
 jobs:
